changing the structutr for colour scheme. As well as making code more Maintainable.

--- a/html/filled.html
+++ b/html/filled.html
@@ -3,165 +3,171 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=1">
+
+    <!--custom css-->
+    <link rel="stylesheet" href="../css/base.css">
+    <link rel="stylesheet" href="../css/ptfe.css">
+    <!--end custom css-->
+
+    <!--External Links-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/ptfe.css">
-    <title>PTFE-BB Engineering</title>
+    <!--End External Links-->
+
+    <link rel="shortcut icon" href="../images/branding/icon.ico">
+    <title>BB Engineering</title>
   </head>
   <body>
-    <!--Navigation-->
+      <!--Navigation-->
+          <nav class="navbar navbar-expand-md navbar-light sticky-top">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"><img src="../images/branding/brand.png" alt="BB Engineering"></a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                          <a class="nav-link" href="../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="ptfe.html">PTFE</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link active" href="filled.html">Filled-PTFE</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="products.html">Products</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="application.html">Application</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+              </div>
+            </div>
+          </nav>
+    <!--end navigation-->
 
-    <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">BB Engineering</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-              <ul class="navbar-nav ml-auto">
-                  <li class="nav-item">
-                    <a class="nav-link" href="../index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="ptfe.html">PTFE</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="filled.html">Filled-PTFE</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="products.html">Products</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="application.html">Application</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                  </li>
-              </ul>
+
+    <!--top background-->
+          <div class="bg">
+            <div class="bg-text">Filled PTFE</div>
+            <div class="bg-title">Infusion Of Pure PTFE with other compounds</div>
+          </div>
+    <!--end top background-->
+
+    <!--Filled Part-->
+        <div class="third pad">
+          <div class="container">
+            <h2 class="display-4 text-center">Filled PTFE<hr style="width:70%;"></h2>
+            <p class="lead">In most situations, PTFE is the perfect fluoroplastic for a wide range of applications. Though when virgin PTFE is not sufficient,
+              you can choose for PTFE with a filler to obtain better properties. Most applicable fillers are glass, carbon, graphite, bronze and Molybdenum disulfide (MoS2).
+              Practically any material that can withstand the sintering temperature of PTFE can be used as filler in PTFE. Characteristics such as particle shape and size,
+              and the chemical composition of the filler greatly affect the properties of the compound.
+              All fillers used in PTFE compounds have been carefully selected and were in several cases
+              specially developed to give the best balance of properties. The following paragraphs discuss the main features of the most commonly used fillers.
+            </p>
+            <div class="row">
+              <div class="col-xs-12 col-sm-12 col-md-6 border-right">
+                <h4>Glass Filled PTFE</h4>
+                <p class="lead">
+                   Fibreglass is the most commonly used filler for PTFE. It makes it more resistant to wear,
+                   more resistant to creep, makes it suitable for higher surface pressure and is very chemically resistant.
+                   The disadvantage is that it is much more abrasive for the opposite counter material.
+                   Application: piston rings, bushings, threaded connections.
+                </p>
+                <p class="lead">
+                  Most commonly used compounds:
+                  <ul>
+                    <li>PTFE + 25% glass fiber</li>
+                    <li>PTFE + 15% + 5% MoS2 glass</li>
+                    <li>PTFE + glass spheres</li>
+                  </ul>
+                </p>
+              </div>
+              <div class="col-xs-12 col-sm-12 col-md-6">
+                <h4>Carbon Filled PTFE</h4>
+                <p class="lead">
+                  Carbon can be used in the form of powder or fibres.
+                  It improves the compressive strength, making it more resistant to wear, increases the thermal conductivity and makes
+                  the material electrically conductive. Carbon is less abrasive than glass. Combined with graphite it is perfect for sliding applications and piston rings.
+                </p>
+                <p class="lead">
+                  Properties:
+                  <ul>
+                    <li>Carbon: Amorphous carbon Petroleum</li>
+                    <li>Purity: > 99%</li>
+                    <li>Particle size: &lt75µm</li>
+                    <li>Density: 1.8 g/m³</li>
+                  </ul>
+                </p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-xs-12 col-sm-12 col-md-6 border-right">
+                <h4>Graphite Filled PTFE</h4>
+                <p class="lead">
+                  Graphite is a form of carbon. The flake-like crystals provide a
+                  perfect lubrication and reducing wear. Graphite is usually combined with other fillers such as glass and carbon.
+                </p>
+                <p class="lead">
+                  Properties:
+                  <ul>
+                    <li>Graphite: Synthetic</li>
+                    <li>Purity: > 99%</li>
+                    <li>irregular shape</li>
+                    <li>Particle size: &lt75µm</li>
+                    <li>Density: 2.26 g/m</li>
+                  </ul>
+                </p>
+              </div>
+              <div class="col-xs-12 col-sm-12 col-md-6">
+                <h4>Bronze Filled PTFE</h4>
+                <p class="lead">
+                  Bronze makes the material more resistant to wear, generates a better heat conductivity,
+                  more pressure resistant and more resistant to creep.
+                  It has higher friction resistance than other filled PTFE compounds. By the addition of MoS2,
+                  the frictional resistance can be reduced. Chemical resistance is a lot worse.
+                  Bronze can oxidise.
+                  Application: ship bushings
+                </p>
+                <p class="lead">
+                  Most commonly used compounds:
+                  <ul>
+                    <li>PTFE + 60% bronze</li>
+                    <li>PTFE + 55% bronze + 5% MoS2</li>
+                    <li>Bronze: Cu/Sn: 9/1</li>
+                  </ul>
+                  Properties:
+                  <ul>
+                    <li>Irregular or spherical shape</li>
+                    <li>Particle size: &lt60µm</li>
+                    <li>Density: 8.95 g/m³</li>
+                  </ul>
+                </p>
+              </div>
+            </div>
+          </div>
+          <br><br>
         </div>
-      </div>
-    </nav>
-    <div class="bg">
-    <div class="bg-text">Filled-PTFE</div>
-   <div class="bg-title">Making PTFE even Better</div>
-  </div>
-
-
-
-
-  <!--Filled Part-->
-  <div class="third pad">
-    <div class="container">
-      <h2 class="display-4 text-center">Filled PTFE<hr style="width:70%;"></h2>
-      <p class="lead">In most situations, PTFE is the perfect fluoroplastic for a wide range of applications. Though when virgin PTFE is not sufficient,
-        you can choose for PTFE with a filler to obtain better properties. Most applicable fillers are glass, carbon, graphite, bronze and Molybdenum disulfide (MoS2).
-        Practically any material that can withstand the sintering temperature of PTFE can be used as filler in PTFE. Characteristics such as particle shape and size,
-        and the chemical composition of the filler greatly affect the properties of the compound.
-        All fillers used in PTFE compounds have been carefully selected and were in several cases
-        specially developed to give the best balance of properties. The following paragraphs discuss the main features of the most commonly used fillers.
-      </p>
-      <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-6 border-right">
-          <h4>Glass Filled PTFE</h4>
-          <p class="lead">
-             Fibreglass is the most commonly used filler for PTFE. It makes it more resistant to wear,
-             more resistant to creep, makes it suitable for higher surface pressure and is very chemically resistant.
-             The disadvantage is that it is much more abrasive for the opposite counter material.
-             Application: piston rings, bushings, threaded connections.
-          </p>
-          <p class="lead">
-            Most commonly used compounds:
-            <ul>
-              <li>PTFE + 25% glass fiber</li>
-              <li>PTFE + 15% + 5% MoS2 glass</li>
-              <li>PTFE + glass spheres</li>
-            </ul>
-          </p>
-        </div>
-        <div class="col-xs-12 col-sm-12 col-md-6">
-          <h4>Carbon Filled PTFE</h4>
-          <p class="lead">
-            Carbon can be used in the form of powder or fibres.
-            It improves the compressive strength, making it more resistant to wear, increases the thermal conductivity and makes
-            the material electrically conductive. Carbon is less abrasive than glass. Combined with graphite it is perfect for sliding applications and piston rings.
-          </p>
-          <p class="lead">
-            Properties:
-            <ul>
-              <li>Carbon: Amorphous carbon Petroleum</li>
-              <li>Purity: > 99%</li>
-              <li>Particle size: &lt75µm</li>
-              <li>Density: 1.8 g/m³</li>
-            </ul>
-          </p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-6 border-right">
-          <h4>Graphite Filled PTFE</h4>
-          <p class="lead">
-            Graphite is a form of carbon. The flake-like crystals provide a
-            perfect lubrication and reducing wear. Graphite is usually combined with other fillers such as glass and carbon.
-          </p>
-          <p class="lead">
-            Properties:
-            <ul>
-              <li>Graphite: Synthetic</li>
-              <li>Purity: > 99%</li>
-              <li>irregular shape</li>
-              <li>Particle size: &lt75µm</li>
-              <li>Density: 2.26 g/m</li>
-            </ul>
-          </p>
-        </div>
-        <div class="col-xs-12 col-sm-12 col-md-6">
-          <h4>Bronze Filled PTFE</h4>
-          <p class="lead">
-            Bronze makes the material more resistant to wear, generates a better heat conductivity,
-            more pressure resistant and more resistant to creep.
-            It has higher friction resistance than other filled PTFE compounds. By the addition of MoS2,
-            the frictional resistance can be reduced. Chemical resistance is a lot worse.
-            Bronze can oxidise.
-            Application: ship bushings
-          </p>
-          <p class="lead">
-            Most commonly used compounds:
-            <ul>
-              <li>PTFE + 60% bronze</li>
-              <li>PTFE + 55% bronze + 5% MoS2</li>
-              <li>Bronze: Cu/Sn: 9/1</li>
-            </ul>
-            Properties:
-            <ul>
-              <li>Irregular or spherical shape</li>
-              <li>Particle size: &lt60µm</li>
-              <li>Density: 8.95 g/m³</li>
-            </ul>
-          </p>
-        </div>
-      </div>
-    </div>
-    <br><br>
-  </div>
-
-
-
-
-
+  <!--end Filled Part-->
 
 
   <!--Filled Table -->
   <div class="fourth">
     <div class="container">
-      <h2 class="display-4 text-center">PTFE Filled Compositions-Basic Properties</h2>
+      <h2 class="display-4 text-center text-red">PTFE Filled Compositions-Basic Properties</h2>
       <div class="table table-responsive table-custom">
         <table align="center">
           <tr>
-            <th><p class="lead">Grade</p></th>
-            <th><p class="lead">Filler Content by weight(%)</p></th>
-            <th><p class="lead">Properties</p></th>
+            <th><p class="lead text-red">Grade</p></th>
+            <th><p class="lead text-red">Filler Content by weight(%)</p></th>
+            <th><p class="lead text-red">Properties</p></th>
           </tr>
           <tr>
             <td>Virgin PTFE</td>
@@ -334,6 +340,7 @@
       </div>
     </div>
   </div>
+<!--end Filled table-->
 
 <!--filled ptfe Gallery-->
   <div class="third-inner">
@@ -417,29 +424,30 @@
       </div>
     </div>
     </div>
-
   </div>
+<!--Filled Ptfe Gallery Ends-->
 
 
-      <!---footer--->
-        <footer>
-          <div class="container-fluid padding">
-            <div class="row text-center">
-              <div class="col-12">
-                <p>555-555-555</p>
-                <p>email@myemail.com</p>
-                <p>100 Street Name</p>
-                <p>Kolkata 700-059</p>
-                <p>West Bengal</p>
-              </div>
-              <div class="col-12">
-                  <hr class="light">
-                  <h5>&copy; bbengineering.com</h5>
-              </div>
-            </div>
-          </div>
-          <br>
-        </footer>
 
-  </body>
-  </html>
+
+<!---footer--->
+  <footer>
+    <div class="container-fluid">
+      <div class="row text-center">
+        <div class="col-12">
+          <p>555-555-555</p>
+          <p>email@myemail.com</p>
+          <p>100 Street Name</p>
+          <p>Kolkata 700-059</p>
+          <p>West Bengal</p>
+        </div>
+        <div class="col-12">
+            <hr class="light">
+            <h5>&copy; bbengineering.com</h5>
+        </div>
+      </div>
+    </div>
+  </footer>
+<!--end footer-->
+</body>
+</html>
