--- a/html/productPages/Gaskets.html
+++ b/html/productPages/Gaskets.html
@@ -3,115 +3,141 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=1">
+
+    <!--custom css-->
+    <link rel="stylesheet" href="../../css/base.css">
+    <link rel="stylesheet" href="../../css/products.css">
+    <!--end custom css-->
+
+    <!--External Links-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../../css/productCss/gaskets.css">
-    <title>Gaskets-BB Engineering</title>
+    <!--End External Links-->
+
+    <link rel="shortcut icon" href="../../images/branding/icon.ico">
+    <title>Gaskets</title>
   </head>
   <body>
     <!--Navigation-->
-    <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="../../index.html">BB Engineering</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="../../index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../ptfe.html">PTFE</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../filled.html">Filled-PTFE</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../products.html">Products</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../application.html">Application</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../contact.html">Contact</a>
-              </li>
-          </ul>
+        <nav class="navbar navbar-expand-md navbar-light sticky-top">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img src="../../images/branding/brand.png" alt="BB Engineering"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                  <ul class="navbar-nav ml-auto">
+                      <li class="nav-item">
+                        <a class="nav-link" href="../../index.html">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../ptfe.html">PTFE</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../filled.html">Filled-PTFE</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" href="../products.html">Products</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../application.html">Application</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../contact.html">Contact</a>
+                      </li>
+                  </ul>
+            </div>
+          </div>
+        </nav>
+  <!--end navigation-->
+
+
+  <!--product heading-->
+        <div class="heading">
+        <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-7">
+            <p class="heading-title">PTFE Products</p>
+            <p class="heading-title-small">Manufacturer and Supplier</p>
+          </div>
+          <div class="col-xs-12 col-sm-12 col-md-5">
+            <div class="dropdown">
+                <button class="dropbtn">Our Products</button>
+                <div class="dropdown-content">
+                  <a href="Gaskets.html">PTFE Gaskets</a>
+                  <a href="Envelopes.html">PTFE Envelopes</a>
+                  <a href="belowSeals.html">PTFE Below Seals</a>
+                  <a href="valve.html">PTFE Valve Components</a>
+                  <a href="nozzels.html">PTFE Nozzles</a>
+                  <a href="rings.html">PTFE Rings</a>
+                  <a href="wearStrip.html">PTFE Wear Strips</a>
+                  <a href="bush.html">PTFE Bushes</a>
+                  <a href="sksheet.html">PTFE Skived Sheet</a>
+                  <a href="washer.html">PTFE Washers</a>
+                  <a href="etched.html">PTFE Etched Sheets</a>
+                </div>
+            </div>
+          </div>
         </div>
       </div>
-    </nav>
-  <!--product heading-->
-  <div class="heading">
-  <div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-7">
-      <p class="heading-title">PTFE Products</p>
-      <p class="heading-title-small">Manufacturer and Supplier</p>
-    </div>
-    <div class="col-xs-12 col-sm-12 col-md-5">
-      <div class="dropdown">
-          <button class="dropbtn">Our Products</button>
-          <div class="dropdown-content">
-            <a href="Gaskets.html">PTFE Gaskets</a>
-            <a href="Envelopes.html">PTFE Envelopes</a>
-            <a href="belowSeals.html">PTFE Below Seals</a>
-            <a href="valve.html">PTFE Valve Components</a>
-            <a href="nozzels.html">PTFE Nozzles</a>
-            <a href="rings.html">PTFE Rings</a>
-            <a href="wearStrip.html">PTFE Wear Strips</a>
-            <a href="bush.html">PTFE Bushes</a>
-            <a href="sksheet.html">PTFE Skived Sheets</a>
-            <a href="washer.html">PTFE Washers</a>
-            <a href="etched.html">PTFE Etched Sheets</a>
-          </div>
       </div>
-    </div>
-  </div>
-</div>
-</div>
+  <!--product heading-->
+<br>
+
+
 <!--product content-->
 <div class="container">
 <div class="container-fluid">
   <div class="content">
-  <div class="row">
+  <div class="row bg-jumbotron jumbotron">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
-        <h3 class="display-4">PTFE Gaskets</h3>
+        <h3 class="display-4 text-red">PTFE Gaskets</h3>
         <hr>
         <h6>
-          <p>PTFE is a high performance polymer with versatile properties that make it a very useful
+          <p class="lead">PTFE is a high performance polymer with versatile properties that make it a very useful
             material in various industrial applications.</p>
-          <p>B B ENGINEERING  is engaged in manufacturing PTFE in various forms such as PTFE gaskets.
+          <p class="lead">B B ENGINEERING  is engaged in manufacturing PTFE in various forms such as PTFE gaskets.
             These gaskets manufactured by B B ENGINEERING find wide use in a number of industries.</p>
-          <p>This is due to their chemical inertness, high resistance to weather, excellent electrical
+          <p class="lead">This is due to their chemical inertness, high resistance to weather, excellent electrical
             insulation, and resistance to very high heat.</p>
-          <p>These materials are also non-adhesive and have very low friction coefficient.</p>
+          <p class="lead">These materials are also non-adhesive and have very low friction coefficient.</p>
         </h6>
       </div>
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
-          <img src="../../images/gaskets.jpg" alt="gaskets" class="img-fluid" class="productImg"/>
+          <img src="../../images/products/gaskets.jpg" alt="gaskets" class="img-fluid"/>
       </div>
   </div>
 
-  <div class="card border-info mb-3">
+
+<br>
+  <div class="card border-red mb-3">
   <div class="card-body text-dark">
     <h5 class="card-title">Uses of PTFE Gaskets</h5>
     <hr>
-    <p class="card-text">It finds wide use in industries pharmaceutical, chemical, thermal, electrical, nuclear, machine tools and other industries.
+    <p class="lead">It finds wide use in industries pharmaceutical, chemical, thermal, electrical, nuclear, machine tools and other industries.
       Indeed, these are useful in almost all kinds of industries.</p>
-    <p>PTFE gaskets manufactured by <strong>B B ENGINEERING</strong> are useful in making compressors
+    <p class="lead">PTFE gaskets manufactured by <strong>B B ENGINEERING</strong> are useful in making compressors
       since these gaskets make excellent sealing gaskets due to their high water and heat resistance.</p>
-    <p>PTFE gaskets are also used as sealing gaskets in making electrical motors
+    <p class="lead">PTFE gaskets are also used as sealing gaskets in making electrical motors
       in components which are exposed to high heat and high wear.
       It is also used in electronic instruments for making secure seals that enhance product life. </p>
-    <p>Petrochemical also makes use of PTFE Gaskets made by BB Engineering for process equipment that need to be corrosive resistant, temperature resistant, as well as resistant to surface wear.
+    <p class="lead">Petrochemical also makes use of PTFE Gaskets made by BB Engineering for process equipment that need to be corrosive resistant, temperature resistant, as well as resistant to surface wear.
       They are also used as Universal Rope, O/D/V/U Rings, Crescent Rings etc for Glass Pipelines.</p>
   </div>
 </div>
   </div>
 </div>
 </div>
+
+
+
+
+
+
+
+
 
 <!---footer--->
   <footer>
@@ -131,5 +157,6 @@
       </div>
     </div>
   </footer>
+<!--end footer-->
 </body>
 </html>
