--- a/html/productPages/rings.html
+++ b/html/productPages/rings.html
@@ -3,87 +3,104 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=1">
+
+    <!--custom css-->
+    <link rel="stylesheet" href="../../css/base.css">
+    <link rel="stylesheet" href="../../css/products.css">
+    <!--end custom css-->
+
+    <!--External Links-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../../css/productCss/rings.css">
-    <title>Rings-BB Engineering</title>
+    <!--End External Links-->
+
+    <link rel="shortcut icon" href="../../images/branding/icon.ico">
+    <title>Rings</title>
   </head>
   <body>
     <!--Navigation-->
-    <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="../../index.html">BB Engineering</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="../../index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../ptfe.html">PTFE</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../filled.html">Filled-PTFE</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../products.html">Products</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../application.html">Application</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../contact.html">Contact</a>
-              </li>
-          </ul>
+        <nav class="navbar navbar-expand-md navbar-light sticky-top">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img src="../../images/branding/brand.png" alt="BB Engineering"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                  <ul class="navbar-nav ml-auto">
+                      <li class="nav-item">
+                        <a class="nav-link" href="../../index.html">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../ptfe.html">PTFE</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../filled.html">Filled-PTFE</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" href="../products.html">Products</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../application.html">Application</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../contact.html">Contact</a>
+                      </li>
+                  </ul>
+            </div>
+          </div>
+        </nav>
+  <!--end navigation-->
+
+
+  <!--product heading-->
+        <div class="heading">
+        <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-7">
+            <p class="heading-title">PTFE Products</p>
+            <p class="heading-title-small">Manufacturer and Supplier</p>
+          </div>
+          <div class="col-xs-12 col-sm-12 col-md-5">
+            <div class="dropdown">
+                <button class="dropbtn">Our Products</button>
+                <div class="dropdown-content">
+                  <a href="Gaskets.html">PTFE Gaskets</a>
+                  <a href="Envelopes.html">PTFE Envelopes</a>
+                  <a href="belowSeals.html">PTFE Below Seals</a>
+                  <a href="valve.html">PTFE Valve Components</a>
+                  <a href="nozzels.html">PTFE Nozzles</a>
+                  <a href="rings.html">PTFE Rings</a>
+                  <a href="wearStrip.html">PTFE Wear Strips</a>
+                  <a href="bush.html">PTFE Bushes</a>
+                  <a href="sksheet.html">PTFE Skived Sheet</a>
+                  <a href="washer.html">PTFE Washers</a>
+                  <a href="etched.html">PTFE Etched Sheets</a>
+                </div>
+            </div>
+          </div>
         </div>
       </div>
-    </nav>
-  <!--product heading-->
-  <div class="heading">
-  <div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-7">
-      <p class="heading-title">PTFE Products</p>
-      <p class="heading-title-small">Manufacturer and Supplier</p>
-    </div>
-    <div class="col-xs-12 col-sm-12 col-md-5">
-      <div class="dropdown">
-          <button class="dropbtn">Our Products</button>
-          <div class="dropdown-content">
-            <a href="Gaskets.html">PTFE Gaskets</a>
-            <a href="Envelopes.html">PTFE Envelopes</a>
-            <a href="belowSeals.html">PTFE Below Seals</a>
-            <a href="valve.html">PTFE Valve Components</a>
-            <a href="nozzels.html">PTFE Nozzles</a>
-            <a href="rings.html">PTFE Rings</a>
-            <a href="wearStrip.html">PTFE Wear Strips</a>
-            <a href="bush.html">PTFE Bushes</a>
-            <a href="sksheet.html">PTFE Skived Sheets</a>
-            <a href="washer.html">PTFE Washers</a>
-            <a href="etched.html">PTFE Etched Sheets</a>
-          </div>
       </div>
-    </div>
-  </div>
-</div>
-</div>
+  <!--product heading-->
+<br>
+
+
+
 
 <div class="container">
   <div class="container-fluid">
     <div class="content">
-      <div class="row padding bg-light">
+      <div class="row bg-jumbotron padding">
           <div class="col-xs-12 col-sm-12 col-md-6">
-            <h3>PTFE Rings</h3>
+            <h3 class="dislay-4 text-red">PTFE Rings</h3>
             <hr>
             <h6>
-              <p>While most common Ring materials are rubber or elastomeric compounds,
+              <p class="lead">While most common Ring materials are rubber or elastomeric compounds,
                  certain operating conditions and hardware configurations merit the use of PTFE as the material.</p>
               <h6>Advantages over Elastomers</h6>
-              <p>
+              <p class="lead">
                 <ul>
                     <li>corrosion resistance</li>
                     <li>massive temperature range capabilities</li>
@@ -92,8 +109,8 @@
                 </ul>
               </p>
               <h6>PTFE Rings we make:</h6>
-              <p>
-                <ul id="ring-list">
+              <p class="lead">
+                <ul>
                   <li>PTFE O-Rings</li>
                   <li>PTFE Back-up Rings</li>
                   <li>PTFE V-Rings</li>
@@ -104,83 +121,98 @@
             </h6>
           </div>
           <div class="col-xs-12 col-sm-12 col-md-6">
-            <img src="../../images/rings.jpg" class="img-fluid">
+            <img src="../../images/products/rings.jpg" class="img-fluid">
           </div>
         </div>
-        <div class="row padding">
+
+        <br>
+
+
+        <div class="row padding border-red">
           <div class="col-xs-12 col-sm-12 col-md-6">
-            <img src="../../images/orings.jpg" class="img-fluid">
+            <img src="../../images/products/orings.jpg" class="img-fluid">
           </div>
             <div class="col-xs-12 col-sm-12 col-md-6">
               <br>
-              <h3>PTFE O-Rings</h3>
+              <h3 class="dislay-4 text-red">PTFE O-Rings</h3>
               <hr>
               <h6>
-                <p>The compound of polymerization is utilized to make our PTFE O-Rings
+                <p class="lead">The compound of polymerization is utilized to make our PTFE O-Rings
                   by utilizing hi-tech machines, chemicals, elements, tools, technology and other components. </p>
-                  <p>These rings are broadly utilized in the chemical sector as well as are highly
+                  <p class="lead">These rings are broadly utilized in the chemical sector as well as are highly
                     known by the customers for their corrosion resistance, dimensions, elevated tensile strength, performance and reliability.</p>
-                  <p>The provided PTFE O Rings are available in variable diameters, lengths and dimensions. </p>
-                  <p>These have the most differing features that make them to tolerate elevated pressure and temperature conditions.</p>
+                  <p class="lead">The provided PTFE O Rings are available in variable diameters, lengths and dimensions. </p>
+                  <p class="lead">These have the most differing features that make them to tolerate elevated pressure and temperature conditions.</p>
               </h6>
             </div>
           </div>
-          <div class="row padding bg-light">
+
+          <br>
+
+
+          <div class="row padding bg-jumbotron">
               <div class="col-xs-12 col-sm-12 col-md-6">
-                <h3>PTFE Back-up Rings</h3>
+                <h3 class="dislay-4 text-red">PTFE Back-up Rings</h3>
                 <hr>
                 <h6>
-                  <p>PTFE Backup rings are manufactured to support &
+                  <p class="lead">PTFE Backup rings are manufactured to support &
                     prevent the problems of extrusion of the Rings when it is subject to high pressures in both dynamic and static applications. </p>
-                    <div class="padding">
-                        <p style="font-weight:bold; font-size:0.9rem;">Spiral Back-up Rings</p>
-                        <p style="font-size:0.8rem;">Spiral Back-up Rings are most commonly consumed rings and is self adjusting to diametric tolerances.
+                    <div class="lead">
+                        <p style="font-weight:bold; font-size:1rem;" class="text-red">Spiral Back-up Rings</p>
+                        <p style="font-size:1rem;">Spiral Back-up Rings are most commonly consumed rings and is self adjusting to diametric tolerances.
                           It is basically available in single ordouble turn.</p>
                     </div>
-                    <div class="padding">
-                        <p style="font-weight:bold; font-size:0.9rem;">Solid Back-up Rings</p>
-                        <p style="font-size:0.8rem;">Solid Back-up Rings are solid and don't have any cuts
+                    <div class="lead">
+                        <p style="font-weight:bold; font-size:1rem;" class="text-red">Solid Back-up Rings</p>
+                        <p style="font-size:1rem;">Solid Back-up Rings are solid and don't have any cuts
                           and are there just to support or provide fall back to other rings.</p>
                     </div>
-                    <div class="padding">
-                        <p style="font-weight:bold; font-size:0.9rem;">SPlit Back-up Rings</p>
-                        <p style="font-size:0.8rem;">Split Back-up Rings are manufactured same as solid back-up
+                    <div class="lead">
+                        <p style="font-weight:bold; font-size:1rem;" class="text-red">SPlit Back-up Rings</p>
+                        <p style="font-size:1rem;">Split Back-up Rings are manufactured same as solid back-up
                           rings but is split at 30 Degree to facilitate ease in certain applications</p>
                     </div>
+                    <p class="lead"><br>All varieties are processed to suit PTFE Rings standards.</p>
+                    <p class="lead">It can be supplied in Virgin PTFE, Glass Filled PTFE, Pigmented PTFE or as per end-user requirements.</p>
                 </h6>
               </div>
               <div class="col-xs-12 col-sm-12 col-md-6">
-                <img src="../../images/backupRing.jpg" class="img-fluid">
-                <p><br>All varieties are processed to suit PTFE Rings standards.</p>
-                <p>It can be supplied in Virgin PTFE, Glass Filled PTFE, Pigmented PTFE or as per end-user requirements.</p>
+                <img src="../../images/products/backupRing.jpg" class="img-fluid">
               </div>
             </div>
-            <div class="row padding">
+
+            <br>
+
+
+            <div class="row padding border-red">
               <div class="col-xs-12 col-sm-12 col-md-6">
-                <img src="../../images/vring.jpg" class="img-fluid">
+                <img src="../../images/products/vring.jpg" class="img-fluid">
               </div>
                 <div class="col-xs-12 col-sm-12 col-md-6">
                   <br>
-                  <h3>PTFE V-Rings</h3>
+                  <h3 class="dislay-4 text-red">PTFE V-Rings</h3>
                   <hr>
                   <h6>
-                    <p>V rings are machined as per customer specifications/drawings.</p>
-                    <p>It can be used on all pressure ranges by varying the number of V-rings in the set It is also known as Chevron Packing </p>
-                    <p>V-Packing which has Cryogenic applications, Chemical application. V-Packing are majorly consumed by Valve engineering </p>
+                    <p class="lead">V rings are machined as per customer specifications/drawings.</p>
+                    <p class="lead">It can be used on all pressure ranges by varying the number of V-rings in the set It is also known as Chevron Packing </p>
+                    <p class="lead">V-Packing which has Cryogenic applications, Chemical application. V-Packing are majorly consumed by Valve engineering </p>
                   </h6>
                 </div>
               </div>
-              <div class="row padding">
+
+              <br>
+
+              <div class="row padding bg-jumbotron">
                   <div class="col-xs-12 col-sm-12 col-md-6">
                     <br>
-                    <h3>PTFE U-Rings</h3>
+                    <h3 class="dislay-4 text-red">PTFE U-Rings</h3>
                     <hr>
                     <h6>
-                      <p>Rings are processed for high functional reliability & resistance to ageing.</p>
-                      <p>It s reliability consist of high pressures & vacuum used for rotary & static applications.</p>
-                      <p>These Rings are available with springs for seal rotating and translational movements It is also known as PTFE U-packings which has many engineering  application in</p>
-                      <p>
-                        <ul>
+                      <p class="lead">Rings are processed for high functional reliability & resistance to ageing.</p>
+                      <p class="lead">It s reliability consist of high pressures & vacuum used for rotary & static applications.</p>
+                      <p class="lead">These Rings are available with springs for seal rotating and translational movements It is also known as PTFE U-packings which has many engineering  application in</p>
+                      <p class="lead">
+                        <ul class="lead">
                           <li>Mechanical engineering</li>
                           <li>Pharmaceuticals</li>
                           <li>Petrochemicals</li>
@@ -190,22 +222,25 @@
                     </h6>
                   </div>
                   <div class="col-xs-12 col-sm-12 col-md-6">
-                    <img src="../../images/uring.jpg" class="img-fluid">
+                    <img src="../../images/products/uring.jpg" class="img-fluid">
                   </div>
                 </div>
-                <div class="row padding">
+
+                <br>
+
+                <div class="row padding border-red">
                   <div class="col-xs-12 col-sm-12 col-md-6">
-                    <img src="../../images/pistonRing.jpg" class="img-fluid">
+                    <img src="../../images/products/pistonRing.jpg" class="img-fluid">
                   </div>
                     <div class="col-xs-12 col-sm-12 col-md-6">
                       <br>
-                      <h3>PTFE Piston Rings</h3>
+                      <h3 class="dislay-4 text-red">PTFE Piston Rings</h3>
                       <hr>
                       <h6>
-                        <p>Piston rings possess the quality to operate without lubrication or in less lubricated conditions.</p>
-                        <p>The function of a piston ring is to guide the piston and piston rod of a cylinder, absorbing transverse forces.</p>
-                        <p>It is a resistance to chemical attacks.</p>
-                        <p>Rider Rings, Wearing Rings, Guide Rings are also manufactured in different grades and also as per customer specification.</p>
+                        <p class="lead">Piston rings possess the quality to operate without lubrication or in less lubricated conditions.</p>
+                        <p class="lead">The function of a piston ring is to guide the piston and piston rod of a cylinder, absorbing transverse forces.</p>
+                        <p class="lead">It is a resistance to chemical attacks.</p>
+                        <p class="lead">Rider Rings, Wearing Rings, Guide Rings are also manufactured in different grades and also as per customer specification.</p>
                       </h6>
                     </div>
                   </div>
@@ -215,23 +250,28 @@
 
 
 
+
+
+
+<br>
 <!---footer--->
-  <footer>
-    <div class="container-fluid">
-      <div class="row text-center">
-        <div class="col-12">
-          <p>555-555-555</p>
-          <p>email@myemail.com</p>
-          <p>100 Street Name</p>
-          <p>Kolkata 700-059</p>
-          <p>West Bengal</p>
-        </div>
-        <div class="col-12">
-            <hr class="light">
-            <h5>&copy; bbengineering.com</h5>
-        </div>
+<footer>
+  <div class="container-fluid">
+    <div class="row text-center">
+      <div class="col-12">
+        <p>555-555-555</p>
+        <p>email@myemail.com</p>
+        <p>100 Street Name</p>
+        <p>Kolkata 700-059</p>
+        <p>West Bengal</p>
+      </div>
+      <div class="col-12">
+          <hr class="light">
+          <h5>&copy; bbengineering.com</h5>
       </div>
     </div>
-  </footer>
+  </div>
+</footer>
+<!--end footer-->
 </body>
 </html>
