--- a/html/ptfe.html
+++ b/html/ptfe.html
@@ -3,74 +3,94 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=1">
+
+    <!--custom css-->
+    <link rel="stylesheet" href="../css/base.css">
+    <link rel="stylesheet" href="../css/ptfe.css">
+    <link rel="stylesheet" href="../font-icons/css/ptfe-icons.css">
+    <!--end custom css-->
+
+    <!--External Links-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/ptfe.css">
-    <link rel="stylesheet" href="../icons/fontello/css/fontello.css">
-    <title>PTFE-BB Engineering</title>
+    <!--End External Links-->
+
+    <link rel="shortcut icon" href="../images/branding/icon.ico">
+    <title>BB Engineering</title>
   </head>
   <body>
-    <!--Navigation-->
-    <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">BB Engineering</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-              <ul class="navbar-nav ml-auto">
-                  <li class="nav-item">
-                    <a class="nav-link" href="../index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="ptfe.html">PTFE</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="filled.html">Filled-PTFE</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="products.html">Products</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="application.html">Application</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                  </li>
-              </ul>
-        </div>
-      </div>
-    </nav>
-    <div class="bg">
-    <div class="bg-text">PTFE-PolyTetraFluoroEthylene</div>
-   <div class="bg-title">PTFE IS A SYNTHETIC FLUROPOLYMER OF TETRAFLUOROETHYLENE</div>
-    </div>
+      <!--Navigation-->
+          <nav class="navbar navbar-expand-md navbar-light sticky-top">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"><img src="../images/branding/brand.png" alt="BB Engineering"></a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                          <a class="nav-link" href="../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link active" href="ptfe.html">PTFE</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="filled.html">Filled-PTFE</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="products.html">Products</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="application.html">Application</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+              </div>
+            </div>
+          </nav>
+    <!--end navigation-->
 
-<!--content-->
+
+    <!--top background-->
+          <div class="bg">
+            <div class="bg-text">PTFE-PolyTetraFluoroEthylene</div>
+            <div class="bg-title">PTFE IS A SYNTHETIC FLUROPOLYMER OF TETRAFLUOROETHYLENE</div>
+          </div>
+    <!--end top background-->
+
+
+<!--top intro-->
 <div class="container">
   <div class="container-fluid">
     <div class="content">
       <div class="row">
           <div class="col-12">
-            <h3><br>AN INCREDIBLY VERSATILE MATERIAL WITH A WIDE VARIETY OF APPLICATIONS<hr></h3>
+            <h3 class="display-4 text-red"><br>AN INCREDIBLY VERSATILE MATERIAL WITH A WIDE VARIETY OF APPLICATIONS<hr></h3>
             <h6>
-              <p>Being hydrophobic, non-wetting, high density and resistant to high temperatures,
+              <p class="lead">Being hydrophobic, non-wetting, high density and resistant to high temperatures,
               PTFE is an incredibly versatile material with a wide variety of applications, though it's perhaps best-known for its non-stick properties</p>
-              <p>PTFE is often required for critical applications in which a.o. high temperatures, chemical resistance, low friction are important.</p>
-              <p>The main difference in the fluoropolymers is that PTFE is not melt-processable while all other fluoropolymers are.<p>
-              <p>Standard PTFE is not suitable for injection molding, blow molding or vacuum forming (though Moldflon is).</p>
-              <p>PTFE is an incredibly versatile material used across many industries, thanks to its stable and durable characteristics and affordability.</p>
+              <p class="lead">PTFE is often required for critical applications in which a.o. high temperatures, chemical resistance, low friction are important.</p>
+              <p class="lead">The main difference in the fluoropolymers is that PTFE is not melt-processable while all other fluoropolymers are.<p>
+              <p class="lead">Standard PTFE is not suitable for injection molding, blow molding or vacuum forming (though Moldflon is).</p>
+              <p class="lead">PTFE is an incredibly versatile material used across many industries, thanks to its stable and durable characteristics and affordability.</p>
             </h6>
           </div>
         </div>
       </div>
     </div>
   </div>
+<!--end top intro-->
+
+
+
+<!--why choose ptfe?-->
 <div class="first">
   <div class="container">
-    <h2 class="text-center display-4">Why should you choose PTFE?<hr style="width:70%"></h2>
+    <h2 class="text-center display-4 text-red">Why should you choose PTFE?<hr style="width:70%"></h2>
     <div class="row text-center">
       <div class="col-xs-12 col-sm-6 col-md-4 pad">
         <i class="icon-electrical_insulator"></i>
@@ -123,10 +143,12 @@
   </div>
 </div>
 
+<!--end why choose ptfe?-->
+
 <!--Properties-->
 <div class="second">
   <div class="container">
-        <h2 class="display-4 text-center">Key Properties of PTFE<hr style="width:70%;"></h2>
+        <h2 class="display-4 text-center text-red">Key Properties of PTFE<hr style="width:70%;"></h2>
         <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-6">
           <p class="lead">
@@ -145,11 +167,14 @@
           </p>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-6 pad">
-            <img src="../images/prop.jpg" class="img-fluid">
+            <img src="../images/backgrounds/b4.jpg" class="img-fluid">
         </div>
   </div>
 </div>
 </div>
+<!--end properties-->
+
+
 
     <!---footer--->
       <footer>
@@ -168,8 +193,7 @@
             </div>
           </div>
         </div>
-        <br>
       </footer>
-
+    <!--end footer-->
 </body>
 </html>
