--- a/index.html
+++ b/index.html
@@ -3,227 +3,177 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=1">
+
+    <!--custom css-->
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/index.css">
+    <!--end custom css-->
+
+    <!--External Links-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/cf15542e4f.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/index.css">
+    <!--End External Links-->
+
+    <link rel="shortcut icon" href="images/branding/icon.ico">
     <title>BB Engineering</title>
   </head>
   <body>
-
-
-
-    <!--Navigation-->
-    <nav class="navbar navbar-expand-md navbar-light sticky-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">BB Engineering</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-              <ul class="navbar-nav ml-auto">
-                  <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="html/ptfe.html">PTFE</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="filled.html">Filled-PTFE</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="html/products.html">Products</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="html/application.html">Application</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="html/contact.html">Contact</a>
-                  </li>
-              </ul>
-        </div>
-      </div>
-    </nav>
-
+      <!--Navigation-->
+          <nav class="navbar navbar-expand-md navbar-light sticky-top">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"><img src="images/branding/brand.png" alt="BB Engineering"></a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                          <a class="nav-link active" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="html/ptfe.html">PTFE</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="html/filled.html">Filled-PTFE</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="html/products.html">Products</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="html/application.html">Application</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="html/contact.html">Contact</a>
+                        </li>
+                    </ul>
+              </div>
+            </div>
+          </nav>
+    <!--end navigation-->
 
 
     <!---Image Slider--->
-    <div id="slides" class="carousel slide" data-ride="carousel">
-      <ul class="carousel-indicators">
-        <li data-target="#slides" data-slide-to="0" class="active"></li>
-        <li data-target="#slides" data-slide-to="1"></li>
-      </ul>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="images/background1.jpg" class="">
-          <div class="carousel-caption">
-            <h1>BB ENGINEERING</h1>
-            <h3>Home of PTFE Products</h3>
-            <button type="button" class="btn btn-outline-light btn-lg">Contact Us</button>
+      <div id="slides" class="carousel slide" data-ride="carousel">
+        <ul class="carousel-indicators">
+          <li data-target="#slides" data-slide-to="0" class="active"></li>
+          <li data-target="#slides" data-slide-to="1"></li>
+        </ul>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="images/backgrounds/b2.jpg">
+            <div class="carousel-caption">
+              <img src="images/branding/full-brand.png">
+            </div>
           </div>
-        </div>
-        <div class="carousel-item">
-          <img src="images/background2.jpg">
-          <div class="carousel-caption">
-            <h1>BB ENGINEERING</h1>
-            <h3>Home of PTFE Products</h3>
-            <button type="button" class="btn btn-outline-light btn-lg">Contact Us</button>
+          <div class="carousel-item">
+            <img src="images/backgrounds/b1.jpg">
+            <div class="carousel-caption">
+                <img src="images/branding/full-brand.png">
+            </div>
           </div>
-        </div>
+      </div>
     </div>
-  </div>
+  <!--end Image Slider-->
 
-    <!---Jumbotron--->
+
+  <!---Product Link--->
     <div class="container-fluid">
-      <div class="row jumbotron">
+      <div class="row bg-jumbotron jumbotron">
         <div class="col-xs-12 col-sm-md-9 col-lg-9 col-xl-10">
           <p class="lead">We are a PTFE products manufacturer.
             Our products range from simple PTFE gears sliders and things
             bearings etc that I do not know About. right now.</p>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
-          <a href="html/products.html"><button type="button" class="btn btn-outline-secondary btn-lg">
+          <a href="html/products.html"><button type="button" class="btn btn-outline-red btn-lg">
             Products Gallery</button></a>
       </div>
     </div>
   </div>
+  <!--end Product Link-->
+
+  <!---Two Column Ptfe section--->
+          <div class="container-fluid padding">
+              <div class="row">
+                <div class="col-lg-6">
+                  <h2 class="display-4 text-red">PTFE-Polytetra Fluoro Ethylene</h2>
+                  <p class="lead">PTFE is often required for critical
+                    applicationsin which a.o. high temperatures, chemicalresistance, low friction are important.
+                  </p>
+                  <p class="lead">
+                    The main difference in the fluoropolymers is that PTFE is not
+                    melt-processable while all other fluoropolymers are.
+                  </p>
+                  <p class="lead">
+                    Standard PTFE is not suitable for injection molding,
+                    blow molding or vacuum forming (though Moldflon is).
+                  </p>
+                  <p>
+                  <a href="html/ptfe.html" class="btn btn-outline-red">Learn More</a></p>
+                </div>
+                <div class="col-lg-6">
+                  <img src="images/gears.jpg" class="img-fluid">
+                </div>
+              </div>
+          </div>
+    <!--end ptfe-->
 
 
-  <!---Two Column section--->
-  <div class="container-fluid padding">
-      <div class="row padding">
-        <div class="col-lg-6">
-          <h2 class="display-4 text-primary">PTFE-Polytetra Fluoro Ethylene</h2>
-          <p class="lead">PTFE is often required for critical
-            applicationsin which a.o. high temperatures, chemicalresistance, low friction are important.
-          </p>
-          <p class="lead">
-            The main difference in the fluoropolymers is that PTFE is not
-            melt-processable while all other fluoropolymers are.
-          </p>
-          <p class="lead">
-            Standard PTFE is not suitable for injection molding,
-            blow molding or vacuum forming (though Moldflon is).
-          </p>
-          <p>
-          <a href="#" class="btn btn-primary">Learn More</a></p>
-        </div>
-        <div class="col-lg-6">
-          <img src="images/gears.jpg" class="img-fluid" id="img-ptf">
-        </div>
-      </div>
-      <hr>
-  </div>
 
-    <!---Welcome--->
-    <div class="container-fluid padding">
-      <div class="row welcome text-center">
-        <div class="col-12">
-          <h1 class="display-4 text-primary">Building trust since 1998</h1>
-          <hr>
-        </div>
-        <div class="col-12">
-          <p class="lead">Welcome to BBEngineering. We serve some of India's
-            top comapnies in manufacturing products made up of PTFE.
-            PTFE products are used in almost every Industry one can think of.
-          </p>
-          <p class="lead">Below are a few examples of such Industries.</p>
-        </div>
-      </div>
-    </div>
-
-
-    <!---Three Column section--->
-    <div class="container fluid padding">
-      <div class="row text-center padding">
-        <div class="col-xs-12 col-sm-6 col-md-4">
-          <i class="fas fa-plane"></i>
-          <h3>Aerospace</h3>
-          <p class="lead">PTFE materials are able to retain their outstanding
-            material properties even when exposed to high temperatures and aggressive fuels.</p>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-4">
-          <i class="fas fa-car"></i>
-          <h3>Automobile</h3>
-          <p class="lead">These fluoroplastics are able to maintain their outstanding material properties
-            even when exposed to high temperatures and/or aggressive fuels. </p>
-        </div>
-        <div class="col-sm-12 col-md-4">
-          <i class="fas fa-plus"></i>
-          <h3>Medical</h3>
-          <p class="lead"> Applications in the (semi) Medical industry require clean, smooth, non-toxic and non-allergenic materials.  </p>
-        </div>
-        <div class="container">
-          <br>
-          <p><a href="#" class="btn btn-secondary">More Applications</a></p>
-        </div>
-      </div>
-      <hr>
-    </div>
-
-
-    <!---Something I dunno--->
-    <div class="container-fluid padding">
-      <div class="row welcome text-center">
-        <div class="col-12">
-          <h1 class="display-4">Some Cards</h1>
-        </div>
-      </div>
-    </div>
-    <hr>
-    <!---Cards cuz they look good--->
-    <div class="container-fluid padding">
-      <div class="row padding">
-        <div class="col-xs-12 col-sm-6 col-md-4">
-          <div class="card">
-            <img class="card-img-top" src="images/mac.jpg">
-            <div class="card-content">
-            <h4 class="card-title">Macbook</h4>
-            <p class="card-text padding">Macbooks are cool but pricy. And now some Crappy
-              stuff I don't about. Just filling the space. Ahhh This is stupid.</p>
-              <p><a href="#" class="btn btn-outline-secondary">See More</a></p>
+    <!---Trust section--->
+    <div class="bg-jumbotron jumbotron">
+        <div class="container-fluid">
+          <div class="row welcome text-center">
+            <div class="col-12">
+              <h1 class="display-4 text-red">Building trust since 1980</h1>
+              <hr>
+            </div>
+            <div class="col-12">
+              <p class="lead">Welcome to BBEngineering. We serve some of India's
+                top comapnies in manufacturing products made up of PTFE.
+                PTFE products are used in almost every Industry one can think of.
+              </p>
+              <p class="lead">Below are a few examples of such Industries.</p>
             </div>
           </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4">
-            <div class="card">
-              <img class="card-img-top" src="images/chip.jpg">
-              <div class="card-content">
-              <h4 class="card-title">Chipsets</h4>
-              <p class="card-text padding">Macbooks have Chipsets. And now some Crappy
-                stuff I don't about. Just filling the space. Ahhh This is stupid.</p>
-                <p><a href="#" class="btn btn-outline-secondary">See More</a></p>
-              </div>
-              </div>
+        </div>
+
+    <!---Three Column icon section--->
+        <div class="container fluid">
+          <div class="row text-center">
+            <div class="col-xs-12 col-sm-6 col-md-4">
+              <i class="fas fa-plane"></i>
+              <h3>Aerospace</h3>
+              <p class="lead">PTFE materials are able to retain their outstanding
+                material properties even when exposed to high temperatures and aggressive fuels.</p>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+              <i class="fas fa-car"></i>
+              <h3>Automobile</h3>
+              <p class="lead">These fluoroplastics are able to maintain their outstanding material properties
+                even when exposed to high temperatures and/or aggressive fuels. </p>
             </div>
             <div class="col-sm-12 col-md-4">
-              <div class="card">
-                <img class="card-img-top" src="images/chip.jpg">
-                <div class="card-content">
-                <h4 class="card-title">Chipsets</h4>
-                <p class="card-text padding">Macbooks have Chipsets. And now some Crappy
-                  stuff I don't about. Just filling the space. Ahhh This is stupid.</p>
-                  <p><a href="#" class="btn btn-outline-secondary">See More</a></p>
-                </div>
-                </div>
-              </div>
-        </div>
-      </div>
-
-
-      <!---Logo--->
-      <div class="container-fluid padding">
-        <div class="row text-center">
-          <div class="col-12">
-            <img src="images/logo.JPG" alt="Logo Goes here">
+              <i class="fas fa-plus"></i>
+              <h3>Medical</h3>
+              <p class="lead"> Applications in the (semi) Medical industry require clean, smooth, non-toxic and non-allergenic materials.  </p>
+            </div>
+            <div class="container">
+              <br>
+              <p><a href="html/application.html" class="btn btn-outline-red">More Applications</a></p>
+            </div>
           </div>
+        </div>
+        <!--end three column icon section-->
       </div>
-    </div>
+      <!--end Trust section-->
+
     <!---footer--->
       <footer>
-        <div class="container-fluid padding">
+        <div class="container-fluid">
           <div class="row text-center">
             <div class="col-12">
               <p>555-555-555</p>
@@ -239,5 +189,6 @@
           </div>
         </div>
       </footer>
+    <!--end footer-->
   </body>
 </html>
