--- a/html/productPages/Envelopes.html
+++ b/html/productPages/Envelopes.html
@@ -3,98 +3,115 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=1">
+
+    <!--custom css-->
+    <link rel="stylesheet" href="../../css/base.css">
+    <link rel="stylesheet" href="../../css/products.css">
+    <!--end custom css-->
+
+    <!--External Links-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../../css/productCss/envelopes.css">
-    <title>Envelopes-BB Engineering</title>
+    <!--End External Links-->
+
+    <link rel="shortcut icon" href="../../images/branding/icon.ico">
+    <title>Envelopes</title>
   </head>
   <body>
     <!--Navigation-->
-    <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="../../index.html">BB Engineering</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="../../index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../ptfe.html">PTFE</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../filled.html">Filled-PTFE</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../products.html">Products</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../application.html">Application</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../contact.html">Contact</a>
-              </li>
-          </ul>
+        <nav class="navbar navbar-expand-md navbar-light sticky-top">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img src="../../images/branding/brand.png" alt="BB Engineering"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                  <ul class="navbar-nav ml-auto">
+                      <li class="nav-item">
+                        <a class="nav-link" href="../../index.html">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../ptfe.html">PTFE</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../filled.html">Filled-PTFE</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" href="../products.html">Products</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../application.html">Application</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../contact.html">Contact</a>
+                      </li>
+                  </ul>
+            </div>
+          </div>
+        </nav>
+  <!--end navigation-->
+
+
+  <!--product heading-->
+        <div class="heading">
+        <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-7">
+            <p class="heading-title">PTFE Products</p>
+            <p class="heading-title-small">Manufacturer and Supplier</p>
+          </div>
+          <div class="col-xs-12 col-sm-12 col-md-5">
+            <div class="dropdown">
+                <button class="dropbtn">Our Products</button>
+                <div class="dropdown-content">
+                  <a href="Gaskets.html">PTFE Gaskets</a>
+                  <a href="Envelopes.html">PTFE Envelopes</a>
+                  <a href="belowSeals.html">PTFE Below Seals</a>
+                  <a href="valve.html">PTFE Valve Components</a>
+                  <a href="nozzels.html">PTFE Nozzles</a>
+                  <a href="rings.html">PTFE Rings</a>
+                  <a href="wearStrip.html">PTFE Wear Strips</a>
+                  <a href="bush.html">PTFE Bushes</a>
+                  <a href="sksheet.html">PTFE Skived Sheet</a>
+                  <a href="washer.html">PTFE Washers</a>
+                  <a href="etched.html">PTFE Etched Sheets</a>
+                </div>
+            </div>
+          </div>
         </div>
       </div>
-    </nav>
-  <!--product heading-->
-  <div class="heading">
-  <div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-7">
-      <p class="heading-title">PTFE Products</p>
-      <p class="heading-title-small">Manufacturer and Supplier</p>
-    </div>
-    <div class="col-xs-12 col-sm-12 col-md-5">
-      <div class="dropdown">
-          <button class="dropbtn">Our Products</button>
-          <div class="dropdown-content">
-            <a href="Gaskets.html">PTFE Gaskets</a>
-            <a href="Envelopes.html">PTFE Envelopes</a>
-            <a href="belowSeals.html">PTFE Below Seals</a>
-            <a href="valve.html">PTFE Valve Components</a>
-            <a href="nozzels.html">PTFE Nozzles</a>
-            <a href="rings.html">PTFE Rings</a>
-            <a href="wearStrip.html">PTFE Wear Strips</a>
-            <a href="bush.html">PTFE Bushes</a>
-            <a href="sksheet.html">PTFE Skived Sheets</a>
-            <a href="washer.html">PTFE Washers</a>
-            <a href="etched.html">PTFE Etched Sheets</a>
-          </div>
       </div>
-    </div>
-  </div>
-</div>
-</div>
+  <!--product heading-->
+<br>
 
 <div class="container">
   <div class="container-fluid">
     <div class="content">
       <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
-            <h3 class="display-4">PTFE Envelopes</h3>
+            <h3 class="display-4 text-red">PTFE Envelopes</h3>
             <hr>
             <h6>
-              <p>Envelope gaskets are produced with pure PTFE with a thickness of 0.5 mm.</p>
-              <p>Envelope gaskets have become popular for their special features
+              <p class="lead">Envelope gaskets are produced with pure PTFE with a thickness of 0.5 mm.</p>
+              <p class="lead">Envelope gaskets have become popular for their special features
                 that enables them to be is used in severely corrosive services, excellent creep resistance
                 and high deformability. </p>
-              <p>The PTFE makes the envelope gasket suitable for use in the chemical, pharmaceutical and food industry.</p>
+              <p class="lead">The PTFE makes the envelope gasket suitable for use in the chemical, pharmaceutical and food industry.</p>
             </h6>
           </div>
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
-              <img src="../../images/envelopes.jpg" alt="gaskets" class="img-fluid"/>
+              <img src="../../images/products/envelopes.jpg" alt="PTFE Envelopes" class="img-fluid"/>
           </div>
       </div>
-      <div class="types jumbotron">
-        <h3 class="display-4">Types of Envelopes</h3><br>
+
+      <br>
+
+      <div class="types bg-jumbotron jumbotron">
+        <h3 class="display-4 text-red">Types of Envelopes</h3><br>
         <div class="card-deck">
-          <div class="card border-light mb-3">
+          <div class="card mb-3">
             <div class="card-header">Silt type Envelopes</div>
             <div class="card-body text-dark">
               <p class="card-text">Slit type envelopes can be of different sizes according
@@ -106,7 +123,7 @@
               <p class="card-text">It is tailor made as per requirements of customers.</p>
             </div>
           </div>
-          <div class="card border-light mb-3">
+          <div class="card mb-3">
             <div class="card-header">Milled type Envelope</div>
             <div class="card-body text-dark">
               <p class="card-text">Milled type envelope assures optimum performance
@@ -121,7 +138,8 @@
           </div>
           </div>
         </div>
-        <div class="card border-dark mb-3">
+        <br>
+        <div class="card border-red mb-3">
       <div class="card-header">Applications of PTFE Envelopes</div>
       <div class="card-body text-dark">
         <h5 class="card-title">PTFE Envelopes finds numerous applications like:</h5>
@@ -142,7 +160,6 @@
     </div>
   </div>
 
-
 <!---footer--->
   <footer>
     <div class="container-fluid">
@@ -161,5 +178,6 @@
       </div>
     </div>
   </footer>
+<!--end footer-->
 </body>
 </html>
