--- a/html/productPages/belowSeals.html
+++ b/html/productPages/belowSeals.html
@@ -3,151 +3,174 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=1">
+
+    <!--custom css-->
+    <link rel="stylesheet" href="../../css/base.css">
+    <link rel="stylesheet" href="../../css/products.css">
+    <!--end custom css-->
+
+    <!--External Links-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../../css/productCss/belowSeal.css">
-    <title>Below Seals-BB Engineering</title>
+    <!--End External Links-->
+
+    <link rel="shortcut icon" href="../../images/branding/icon.ico">
+    <title>Below Seals</title>
   </head>
   <body>
     <!--Navigation-->
-    <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="../../index.html">BB Engineering</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="../../index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../ptfe.html">PTFE</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../filled.html">Filled-PTFE</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../products.html">Products</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../application.html">Application</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../contact.html">Contact</a>
-              </li>
-          </ul>
+        <nav class="navbar navbar-expand-md navbar-light sticky-top">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img src="../../images/branding/brand.png" alt="BB Engineering"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                  <ul class="navbar-nav ml-auto">
+                      <li class="nav-item">
+                        <a class="nav-link" href="../../index.html">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../ptfe.html">PTFE</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../filled.html">Filled-PTFE</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" href="../products.html">Products</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../application.html">Application</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../contact.html">Contact</a>
+                      </li>
+                  </ul>
+            </div>
+          </div>
+        </nav>
+  <!--end navigation-->
+
+
+  <!--product heading-->
+        <div class="heading">
+        <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-7">
+            <p class="heading-title">PTFE Products</p>
+            <p class="heading-title-small">Manufacturer and Supplier</p>
+          </div>
+          <div class="col-xs-12 col-sm-12 col-md-5">
+            <div class="dropdown">
+                <button class="dropbtn">Our Products</button>
+                <div class="dropdown-content">
+                  <a href="Gaskets.html">PTFE Gaskets</a>
+                  <a href="Envelopes.html">PTFE Envelopes</a>
+                  <a href="belowSeals.html">PTFE Below Seals</a>
+                  <a href="valve.html">PTFE Valve Components</a>
+                  <a href="nozzels.html">PTFE Nozzles</a>
+                  <a href="rings.html">PTFE Rings</a>
+                  <a href="wearStrip.html">PTFE Wear Strips</a>
+                  <a href="bush.html">PTFE Bushes</a>
+                  <a href="sksheet.html">PTFE Skived Sheet</a>
+                  <a href="washer.html">PTFE Washers</a>
+                  <a href="etched.html">PTFE Etched Sheets</a>
+                </div>
+            </div>
+          </div>
         </div>
       </div>
-    </nav>
-  <!--product heading-->
-  <div class="heading">
-  <div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-7">
-      <p class="heading-title">PTFE Products</p>
-      <p class="heading-title-small">Manufacturer and Supplier</p>
-    </div>
-    <div class="col-xs-12 col-sm-12 col-md-5">
-      <div class="dropdown">
-          <button class="dropbtn">Our Products</button>
-          <div class="dropdown-content">
-            <a href="Gaskets.html">PTFE Gaskets</a>
-            <a href="Envelopes.html">PTFE Envelopes</a>
-            <a href="belowSeals.html">PTFE Below Seals</a>
-            <a href="valve.html">PTFE Valve Components</a>
-            <a href="nozzels.html">PTFE Nozzles</a>
-            <a href="rings.html">PTFE Rings</a>
-            <a href="wearStrip.html">PTFE Wear Strips</a>
-            <a href="bush.html">PTFE Bushes</a>
-            <a href="sksheet.html">PTFE Skived Sheets</a>
-            <a href="washer.html">PTFE Washers</a>
-            <a href="etched.html">PTFE Etched Sheets</a>
-          </div>
       </div>
-    </div>
-  </div>
-</div>
-</div>
-
+  <!--product heading-->
+<br>
+<!--page content-->
 <div class="container">
   <div class="container-fluid">
     <div class="content">
       <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
-            <h3>PTFE Below Seal</h3>
+            <h3 class="display-4 text-red">PTFE Below Seal</h3>
             <hr>
             <h6>
-              <p>The PTFE Bellow Seal is an externally mounted seal for corrosive chemicals where contact with the media is to be avoided.</p>
-              <p>The mating seat is high alumina ceramic with excellent corrosion resistance to highly
+              <p class="lead">The PTFE Bellow Seal is an externally mounted seal for corrosive chemicals where contact with the media is to be avoided.</p>
+              <p class="lead">The mating seat is high alumina ceramic with excellent corrosion resistance to highly
                 corrosive chemicals like concentrated acids and other strong organic chemicals. </p>
             </h6>
           </div>
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
-              <img src="../../images/belowSeal.jpg" alt="gaskets" class="img-fluid"/>
+              <img src="../../images/products/belowSeal.jpg" alt="PTFE Below Seals" class="img-fluid"/>
           </div>
       </div>
+
       <div class="table-properties">
-        <p class="caption">Properties</p>
-        <table
-          <tr>
-            <th>Property</th>
-            <th>Value</th>
-          </tr>
-          <tr>
-            <td>Temperature</td>
-            <td>110&degC</td>
-          </tr>
-          <tr>
-            <td>Pressure</td>
-            <td>5 Bar</td>
-          </tr>
-          <tr>
-            <td>Application</td>
-            <td>
-              <ul>
-              <li>Pharmaceutical industry</li>
-              <li>Food processing</li>
-            </ul>
-            </td>
-          </tr>
-          <tr>
-            <td>Features</td>
-            <td>
-              <ul>
-                <li>High-tensile strength</li>
-                <li>Minimum maintainence</li>
-                <li>Low wear & tear</li>
-                <li>Non-flammable</li>
-                <li>Durable</li>
-              </ul>
-            </td>
-          </tr>
-        </table>
+        <div class="row">
+          <div class="col-12">
+            <p class="display-4 text-red text-center">Properties</p>
+            <table class="table">
+              <tr>
+                <th>Property</th>
+                <th>Value</th>
+              </tr>
+              <tr>
+                <td>Temperature</td>
+                <td>110&degC</td>
+              </tr>
+              <tr>
+                <td>Pressure</td>
+                <td>5 Bar</td>
+              </tr>
+              <tr>
+                <td>Application</td>
+                <td>
+                  <ul>
+                  <li>Pharmaceutical industry</li>
+                  <li>Food processing</li>
+                </ul>
+                </td>
+              </tr>
+              <tr>
+                <td>Features</td>
+                <td>
+                  <ul>
+                    <li>High-tensile strength</li>
+                    <li>Minimum maintainence</li>
+                    <li>Low wear & tear</li>
+                    <li>Non-flammable</li>
+                    <li>Durable</li>
+                  </ul>
+                </td>
+              </tr>
+            </table>
+          </div>
+        </div>
+
       </div>
     </div>
   </div>
 </div>
+<!--end content-->
 
-<!---footer--->
-  <footer>
-    <div class="container-fluid">
-      <div class="row text-center">
-        <div class="col-12">
-          <p>555-555-555</p>
-          <p>email@myemail.com</p>
-          <p>100 Street Name</p>
-          <p>Kolkata 700-059</p>
-          <p>West Bengal</p>
-        </div>
-        <div class="col-12">
-            <hr class="light">
-            <h5>&copy; bbengineering.com</h5>
+
+  <!---footer--->
+    <footer>
+      <div class="container-fluid">
+        <div class="row text-center">
+          <div class="col-12">
+            <p>555-555-555</p>
+            <p>email@myemail.com</p>
+            <p>100 Street Name</p>
+            <p>Kolkata 700-059</p>
+            <p>West Bengal</p>
+          </div>
+          <div class="col-12">
+              <hr class="light">
+              <h5>&copy; bbengineering.com</h5>
+          </div>
         </div>
       </div>
-    </div>
-  </footer>
-</body>
-</html>
+    </footer>
+  <!--end footer-->
+  </body>
+  </html>
