--- a/html/productPages/etched.html
+++ b/html/productPages/etched.html
@@ -3,99 +3,116 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=1">
+
+    <!--custom css-->
+    <link rel="stylesheet" href="../../css/base.css">
+    <link rel="stylesheet" href="../../css/products.css">
+    <!--end custom css-->
+
+    <!--External Links-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../../css/productCss/bush.css">
-    <title>Etched Sheets-BB Engineering</title>
+    <!--End External Links-->
+
+    <link rel="shortcut icon" href="../../images/branding/icon.ico">
+    <title>Etched Sheets</title>
   </head>
   <body>
     <!--Navigation-->
-    <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="../../index.html">BB Engineering</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="../../index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../ptfe.html">PTFE</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../filled.html">Filled-PTFE</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../products.html">Products</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../application.html">Application</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../contact.html">Contact</a>
-              </li>
-          </ul>
+        <nav class="navbar navbar-expand-md navbar-light sticky-top">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img src="../../images/branding/brand.png" alt="BB Engineering"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                  <ul class="navbar-nav ml-auto">
+                      <li class="nav-item">
+                        <a class="nav-link" href="../../index.html">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../ptfe.html">PTFE</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../filled.html">Filled-PTFE</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" href="../products.html">Products</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../application.html">Application</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../contact.html">Contact</a>
+                      </li>
+                  </ul>
+            </div>
+          </div>
+        </nav>
+  <!--end navigation-->
+
+
+  <!--product heading-->
+        <div class="heading">
+        <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-7">
+            <p class="heading-title">PTFE Products</p>
+            <p class="heading-title-small">Manufacturer and Supplier</p>
+          </div>
+          <div class="col-xs-12 col-sm-12 col-md-5">
+            <div class="dropdown">
+                <button class="dropbtn">Our Products</button>
+                <div class="dropdown-content">
+                  <a href="Gaskets.html">PTFE Gaskets</a>
+                  <a href="Envelopes.html">PTFE Envelopes</a>
+                  <a href="belowSeals.html">PTFE Below Seals</a>
+                  <a href="valve.html">PTFE Valve Components</a>
+                  <a href="nozzels.html">PTFE Nozzles</a>
+                  <a href="rings.html">PTFE Rings</a>
+                  <a href="wearStrip.html">PTFE Wear Strips</a>
+                  <a href="bush.html">PTFE Bushes</a>
+                  <a href="sksheet.html">PTFE Skived Sheet</a>
+                  <a href="washer.html">PTFE Washers</a>
+                  <a href="etched.html">PTFE Etched Sheets</a>
+                </div>
+            </div>
+          </div>
         </div>
       </div>
-    </nav>
-  <!--product heading-->
-  <div class="heading">
-  <div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-7">
-      <p class="heading-title">PTFE Products</p>
-      <p class="heading-title-small">Manufacturer and Supplier</p>
-    </div>
-    <div class="col-xs-12 col-sm-12 col-md-5">
-      <div class="dropdown">
-          <button class="dropbtn">Our Products</button>
-          <div class="dropdown-content">
-            <a href="Gaskets.html">PTFE Gaskets</a>
-            <a href="Envelopes.html">PTFE Envelopes</a>
-            <a href="belowSeals.html">PTFE Below Seals</a>
-            <a href="valve.html">PTFE Valve Components</a>
-            <a href="nozzels.html">PTFE Nozzles</a>
-            <a href="rings.html">PTFE Rings</a>
-            <a href="wearStrip.html">PTFE Wear Strips</a>
-            <a href="bush.html">PTFE Bushes</a>
-            <a href="sksheet.html">PTFE Skived Sheets</a>
-            <a href="washer.html">PTFE Washers</a>
-            <a href="etched.html">PTFE Etched Sheets</a>
-          </div>
       </div>
-    </div>
-  </div>
-</div>
-</div>
+  <!--product heading-->
+<br>
+
+
 
 <div class="container">
   <div class="container-fluid">
     <div class="content">
-      <div class="row padding">
+      <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-6">
-            <h3>PTFE Etched Sheets</h3>
+            <h3 class="display-4 text-red">PTFE Etched Sheets</h3>
             <hr>
             <h6>
-              <p>PTFE is an amazing non-stick material, but what about when you need to glue it to the suface of another material? </p>
-              <p>In order to bond standard PTFE to another surface such as stainless steel, a process called "etching" is required.</p>
-              <p>This process is completed by using persulfate compound that in turn dissolves to produce sulfate radicals.</p>
-              <p>Typical applications would include the lining of chemical process tanks or other equipment used in caustic environments.</p>
-              <p>When bonding is needed, sodium ammonia etching is usually the most economical answer.</p>
+              <p class="lead">PTFE is an amazing non-stick material, but what about when you need to glue it to the suface of another material? </p>
+              <p class="lead">In order to bond standard PTFE to another surface such as stainless steel, a process called "etching" is required.</p>
+              <p class="lead">This process is completed by using persulfate compound that in turn dissolves to produce sulfate radicals.</p>
+              <p class="lead">Typical applications would include the lining of chemical process tanks or other equipment used in caustic environments.</p>
+              <p class="lead">When bonding is needed, sodium ammonia etching is usually the most economical answer.</p>
             </h6>
           </div>
           <div class="col-xs-12 col-sm-12 col-md-6">
-            <img src="../../images/etched.jpg" class="img-fluid">
+            <img src="../../images/products/etched.jpg" class="img-fluid">
           </div>
         </div>
-        <div class="row padding bg-light">
-            <div class="col-xs-12 col-sm-12 col-md-6 jumbotron">
-              <h3>The Process:<hr></h3>
-              <p>This process uses of a mixture of sodium and ammonia that is formulated to create a bondable surface both quickly and efficiently.</p>
-              <p>Sodium/ammonia etching service complies with all applicable commercial, military & federal specifications for the surface treatment of all fluoropolymers including:
+        <br>
+        <div class="row bg-jumbotron jumbotron">
+            <div class="col-xs-12 col-sm-12 col-md-6">
+              <h3 class="display-4 text-red">The Process:<hr></h3>
+              <p class="lead">This process uses of a mixture of sodium and ammonia that is formulated to create a bondable surface both quickly and efficiently.</p>
+              <p class="lead">Sodium/ammonia etching service complies with all applicable commercial, military & federal specifications for the surface treatment of all fluoropolymers including:
                 <ul>
                   <li>PTFE</li>
                   <li>PFA</li>
@@ -107,21 +124,20 @@
                   <li>ECTFE</li>
                 </ul>
             </div>
-            <div class="col-xs-12 col-sm-12 col-md-6 jumbotron">
-              <h3>Applications<hr></h3>
-              <p>From microchips to full size rolls, fluoropolymers of any shape or complexity, including tape, sheet, tubing, molded shapes & machined parts
+            <div class="col-xs-12 col-sm-12 col-md-6">
+              <h3 class="display-4 text-red">Applications<hr></h3>
+              <p class="lead">From microchips to full size rolls, fluoropolymers of any shape or complexity, including tape, sheet, tubing, molded shapes & machined parts
                 of any configuration can be etched & bonded. </p>
-              <p>This treatment can be accomplished on one or more surfaces, or selectively within close tolerances</p>
+              <p class="lead">This treatment can be accomplished on one or more surfaces, or selectively within close tolerances</p>
               <h4>Benefits of Etched PTFE Sheets:</h4>
-              <p>Able to be bonded after treatment.</p>
-              <p>Uniform treatment on One Side or Two Sides (Surface treatment only).</p>
+              <p class="lead">Able to be bonded after treatment.</p>
+              <p class="lead">Uniform treatment on One Side or Two Sides (Surface treatment only).</p>
             </div>
         </div>
       </div>
     </div>
   </div>
-
-
+  <br>
 
 
 <!---footer--->
@@ -142,5 +158,6 @@
       </div>
     </div>
   </footer>
+<!--end footer-->
 </body>
 </html>
