--- a/html/productPages/nozzels.html
+++ b/html/productPages/nozzels.html
@@ -3,110 +3,124 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=1">
+
+    <!--custom css-->
+    <link rel="stylesheet" href="../../css/base.css">
+    <link rel="stylesheet" href="../../css/products.css">
+    <!--end custom css-->
+
+    <!--External Links-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../../css/productCss/nozzels.css">
-    <title>Nozzles-BB Engineering</title>
+    <!--End External Links-->
+
+    <link rel="shortcut icon" href="../../images/branding/icon.ico">
+    <title>Nozzles</title>
   </head>
   <body>
     <!--Navigation-->
-    <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="../../index.html">BB Engineering</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="../../index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../ptfe.html">PTFE</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../filled.html">Filled-PTFE</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../products.html">Products</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../application.html">Application</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../contact.html">Contact</a>
-              </li>
-          </ul>
+        <nav class="navbar navbar-expand-md navbar-light sticky-top">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img src="../../images/branding/brand.png" alt="BB Engineering"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                  <ul class="navbar-nav ml-auto">
+                      <li class="nav-item">
+                        <a class="nav-link" href="../../index.html">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../ptfe.html">PTFE</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../filled.html">Filled-PTFE</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" href="../products.html">Products</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../application.html">Application</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../contact.html">Contact</a>
+                      </li>
+                  </ul>
+            </div>
+          </div>
+        </nav>
+  <!--end navigation-->
+
+
+  <!--product heading-->
+        <div class="heading">
+        <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-7">
+            <p class="heading-title">PTFE Products</p>
+            <p class="heading-title-small">Manufacturer and Supplier</p>
+          </div>
+          <div class="col-xs-12 col-sm-12 col-md-5">
+            <div class="dropdown">
+                <button class="dropbtn">Our Products</button>
+                <div class="dropdown-content">
+                  <a href="Gaskets.html">PTFE Gaskets</a>
+                  <a href="Envelopes.html">PTFE Envelopes</a>
+                  <a href="belowSeals.html">PTFE Below Seals</a>
+                  <a href="valve.html">PTFE Valve Components</a>
+                  <a href="nozzels.html">PTFE Nozzles</a>
+                  <a href="rings.html">PTFE Rings</a>
+                  <a href="wearStrip.html">PTFE Wear Strips</a>
+                  <a href="bush.html">PTFE Bushes</a>
+                  <a href="sksheet.html">PTFE Skived Sheet</a>
+                  <a href="washer.html">PTFE Washers</a>
+                  <a href="etched.html">PTFE Etched Sheets</a>
+                </div>
+            </div>
+          </div>
         </div>
       </div>
-    </nav>
-  <!--product heading-->
-  <div class="heading">
-  <div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-7">
-      <p class="heading-title">PTFE Products</p>
-      <p class="heading-title-small">Manufacturer and Supplier</p>
-    </div>
-    <div class="col-xs-12 col-sm-12 col-md-5">
-      <div class="dropdown">
-          <button class="dropbtn">Our Products</button>
-          <div class="dropdown-content">
-            <a href="Gaskets.html">PTFE Gaskets</a>
-            <a href="Envelopes.html">PTFE Envelopes</a>
-            <a href="belowSeals.html">PTFE Below Seals</a>
-            <a href="valve.html">PTFE Valve Components</a>
-            <a href="nozzels.html">PTFE Nozzles</a>
-            <a href="rings.html">PTFE Rings</a>
-            <a href="wearStrip.html">PTFE Wear Strips</a>
-            <a href="bush.html">PTFE Bushes</a>
-            <a href="sksheet.html">PTFE Skived Sheets</a>
-            <a href="washer.html">PTFE Washers</a>
-            <a href="etched.html">PTFE Etched Sheets</a>
-          </div>
       </div>
-    </div>
-  </div>
-</div>
-</div>
-
+  <!--product heading-->
+<br>
 
 
 <div class="container">
   <div class="container-fluid">
     <div class="content">
-      <div class="row padding bg-light">
+      <div class="row bg-jumbotron jumbotron">
           <div class="col-xs-12 col-sm-12 col-md-6">
-            <h3>PTFE Nozzles</h3>
+            <h3 class="display-4 text-red">PTFE Nozzles</h3>
             <hr>
             <h6>
-              <p>PTFE Nozzles are effectively used in different business such as:</p>
-              <p>
+              <p class="lead">PTFE Nozzles are effectively used in different business such as:</p>
+              <p class="lead">
                 <ul>
                   <li>petrochemicals</li> <li>engineering</li> <li>beverage industry</li> <li>aeronautics</li> <li>fertilizers</li>
                 </ul>
               </p>
-              <p>These are designed for containers for simple flow of material such as liquids and semi-liquids.</p>
-              <p>They are precise diameter for installation and discharge purposes.</p>
+              <p class="lead">These are designed for containers for simple flow of material such as liquids and semi-liquids.</p>
+              <p class="lead">They are precise diameter for installation and discharge purposes.</p>
             </h6>
           </div>
           <div class="col-xs-12 col-sm-12 col-md-6">
-            <img src="../../images/nozzles2.jpg" class="img-fluid">
+            <img src="../../images/products/nozzles2.jpg" class="img-fluid">
           </div>
       </div>
-      <div class="row padding bg-light">
+      <br>
+      <div class="row bg-jumbotron jumbotron">
         <div class="col-xs-12 col-sm-12 col-md-6">
-          <h3>More on Nozzles</h3>
+          <h3 class="display-4 text-red">More on Nozzles</h3>
           <hr>
-          <p>These are mainly outlined in white color as they suit both the interior and exterior of storage containers.</p>
-          <p>One end of  PTFE Nozzles is completely threaded, which implies they can be easily installed in the manner of screw without any or least tools. </p>
-          <p>The provided nozzles have small opening at the back so that the contaminants do not flow with the material.</p>
+          <p class="lead">These are mainly outlined in white color as they suit both the interior and exterior of storage containers.</p>
+          <p class="lead">One end of  PTFE Nozzles is completely threaded, which implies they can be easily installed in the manner of screw without any or least tools. </p>
+          <p class="lead">The provided nozzles have small opening at the back so that the contaminants do not flow with the material.</p>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6">
-          <h3>Properties</h3>
-          <p>
+          <h3 class="display-4 text-red">Properties</h3>
+          <p class="lead">
             <ul>
               <li>Working Temperature -250 to+260 Celsius </li>
               <li>Chemical Resistance</li>
@@ -120,9 +134,7 @@
     </div>
   </div>
 </div>
-
-
-
+<br>
 
 
 
@@ -144,5 +156,6 @@
       </div>
     </div>
   </footer>
+<!--end footer-->
 </body>
 </html>
