--- a/html/productPages/valve.html
+++ b/html/productPages/valve.html
@@ -3,98 +3,124 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=1">
+
+    <!--custom css-->
+    <link rel="stylesheet" href="../../css/base.css">
+    <link rel="stylesheet" href="../../css/products.css">
+    <!--end custom css-->
+
+    <!--External Links-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../../css/productCss/valve.css">
-    <title>Valve-BB Engineering</title>
+    <!--End External Links-->
+
+    <link rel="shortcut icon" href="../../images/branding/icon.ico">
+    <title>Valves</title>
   </head>
   <body>
     <!--Navigation-->
-    <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="../../index.html">BB Engineering</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="../../index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../ptfe.html">PTFE</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../filled.html">Filled-PTFE</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../products.html">Products</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../application.html">Application</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../contact.html">Contact</a>
-              </li>
-          </ul>
+        <nav class="navbar navbar-expand-md navbar-light sticky-top">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img src="../../images/branding/brand.png" alt="BB Engineering"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                  <ul class="navbar-nav ml-auto">
+                      <li class="nav-item">
+                        <a class="nav-link" href="../../index.html">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../ptfe.html">PTFE</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../filled.html">Filled-PTFE</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" href="../products.html">Products</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../application.html">Application</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../contact.html">Contact</a>
+                      </li>
+                  </ul>
+            </div>
+          </div>
+        </nav>
+  <!--end navigation-->
+
+
+  <!--product heading-->
+        <div class="heading">
+        <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-7">
+            <p class="heading-title">PTFE Products</p>
+            <p class="heading-title-small">Manufacturer and Supplier</p>
+          </div>
+          <div class="col-xs-12 col-sm-12 col-md-5">
+            <div class="dropdown">
+                <button class="dropbtn">Our Products</button>
+                <div class="dropdown-content">
+                  <a href="Gaskets.html">PTFE Gaskets</a>
+                  <a href="Envelopes.html">PTFE Envelopes</a>
+                  <a href="belowSeals.html">PTFE Below Seals</a>
+                  <a href="valve.html">PTFE Valve Components</a>
+                  <a href="nozzels.html">PTFE Nozzles</a>
+                  <a href="rings.html">PTFE Rings</a>
+                  <a href="wearStrip.html">PTFE Wear Strips</a>
+                  <a href="bush.html">PTFE Bushes</a>
+                  <a href="sksheet.html">PTFE Skived Sheet</a>
+                  <a href="washer.html">PTFE Washers</a>
+                  <a href="etched.html">PTFE Etched Sheets</a>
+                </div>
+            </div>
+          </div>
         </div>
       </div>
-    </nav>
-  <!--product heading-->
-  <div class="heading">
-  <div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-7">
-      <p class="heading-title">PTFE Products</p>
-      <p class="heading-title-small">Manufacturer and Supplier</p>
-    </div>
-    <div class="col-xs-12 col-sm-12 col-md-5">
-      <div class="dropdown">
-          <button class="dropbtn">Our Products</button>
-          <div class="dropdown-content">
-            <a href="Gaskets.html">PTFE Gaskets</a>
-            <a href="Envelopes.html">PTFE Envelopes</a>
-            <a href="belowSeals.html">PTFE Below Seals</a>
-            <a href="valve.html">PTFE Valve Components</a>
-            <a href="nozzels.html">PTFE Nozzles</a>
-            <a href="rings.html">PTFE Rings</a>
-            <a href="wearStrip.html">PTFE Wear Strips</a>
-            <a href="bush.html">PTFE Bushes</a>
-            <a href="sksheet.html">PTFE Skived Sheets</a>
-            <a href="washer.html">PTFE Washers</a>
-            <a href="etched.html">PTFE Etched Sheets</a>
-          </div>
       </div>
-    </div>
-  </div>
-</div>
-</div>
+  <!--product heading-->
+<br>
+
+
+
+
+
 
 <div class="container">
   <div class="container-fluid">
     <div class="content">
-      <div class="row">
+      <div class="row padding bg-jumbotron">
           <div class="col-xs-12 col-sm-12 col-md-12">
-            <h3>PTFE Valve Components</h3>
+            <h3 class="display-4 text-red text-center">PTFE Valve Components</h3>
             <hr>
             <h6>
-              <p>We design and deliver the best quality range of PTFE Valve Component to our valued customers.</p>
-              <p>PTFE Components are fabricated by highly creative work force that has got vast experience in this domain.</p>
-              <p>The range of our PTFE machined components and PTFE products consists of</p>
-              <p>seat rings,roof packing, seal cover, plug valve sleeve, wedge rings, 'O' rings, washes, bearings, balls etc</p>
-              <p>We make sure all these products are delivered only after stringent tests</p>
+              <p class="lead">We design and deliver the best quality range of PTFE Valve Component to our valued customers.</p>
+              <p class="lead">PTFE Components are fabricated by highly creative work force that has got vast experience in this domain.</p>
+              <p class="lead">The range of our PTFE machined components and PTFE products consists of</p>
+              <p class="lead">seat rings,roof packing, seal cover, plug valve sleeve, wedge rings, 'O' rings, washes, bearings, balls etc</p>
+              <p class="lead">We make sure all these products are delivered only after stringent tests</p>
             </h6>
           </div>
       </div>
-      <div class="row bg-light padding">
+
+
+
+      <br>
+
+
+
+      <div class="row border-red padding">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-          <h4>PTFE Seat</h4>
+          <h4 class="display-4 text-red">PTFE Seat</h4>
           <hr>
-          <p>We manufacture a wide range of seat configurations across many industries supplying major global customers.</p>
-          <p>We manufacture all types of valves. Some are:</p>
-          <p>
+          <p class="lead">We manufacture a wide range of seat configurations across many industries supplying major global customers.</p>
+          <p class="lead">We manufacture all types of valves. Some are:</p>
+          <p class="lead">
             <ul>
               <li>Ball Valves</li>
               <li>Butterfly valves</li>
@@ -106,55 +132,72 @@
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
           <br>
-          <img src="../../images/seat.jpg" class="img-fluid">
+          <img src="../../images/products/seat.jpg" class="img-fluid">
         </div>
       </div>
-
-      <div class="row padding">
+      <br>
+      <div class="row padding bg-jumbotron">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-          <img src="../../images/spring.jpg" class="img-fluid">
+          <img src="../../images/products/spring.jpg" class="img-fluid">
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
           <br>
-          <h4>PTFE Spring</h4>
+          <h4 class="display-4 text-red">PTFE Spring</h4>
           <hr>
-          <p>We are renowned manufacturer of PTFE Spring</p> <p>that are used in areas where elastomeric seals
-          cannot meet the </p> <p>frictional, temperature,or chemical resistance requirements of the application.</p>
+          <p class="lead">We are renowned manufacturer of PTFE Spring</p>
+          <p class="lead">that are used in areas where elastomeric seals
+          cannot meet the </p>
+          <p class="lead">frictional, temperature,or chemical resistance requirements of the application.</p>
         </div>
       </div>
-      <div class="row bg-light padding">
+      <br>
+      <div class="row border-red padding">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-          <h4>PTFE Body Ring</h4>
+          <h4 class="display-4 text-red">PTFE Body Ring</h4>
           <hr>
-          <p>We are well equipped with the facilities needed to design,</p>
-          <p>manufacture and test our PTFE body ring. We have built our brand on quality,</p>
-          <p>innovation and customer service to emerge as a preferred supplier to some of the largest OEMs globally.</p>
+          <p class="lead">We are well equipped with the facilities needed to design,</p>
+          <p class="lead">manufacture and test our PTFE body ring. We have built our brand on quality,</p>
+          <p class="lead">innovation and customer service to emerge as a preferred supplier to some of the largest OEMs globally.</p>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-          <img src="../../images/valve.jpg" class="img-fluid">
+          <img src="../../images/products/valve.jpg" class="img-fluid">
         </div>
       </div>
     </div>
   </div>
 </div>
 
+
+
+
+
+
+
+
+
+
+
+
+
+<br>
 <!---footer--->
-  <footer>
-    <div class="container-fluid">
-      <div class="row text-center">
-        <div class="col-12">
-          <p>555-555-555</p>
-          <p>email@myemail.com</p>
-          <p>100 Street Name</p>
-          <p>Kolkata 700-059</p>
-          <p>West Bengal</p>
-        </div>
-        <div class="col-12">
-            <hr class="light">
-            <h5>&copy; bbengineering.com</h5>
-        </div>
+<footer>
+  <div class="container-fluid">
+    <div class="row text-center">
+      <div class="col-12">
+        <p>555-555-555</p>
+        <p>email@myemail.com</p>
+        <p>100 Street Name</p>
+        <p>Kolkata 700-059</p>
+        <p>West Bengal</p>
+      </div>
+      <div class="col-12">
+          <hr class="light">
+          <h5>&copy; bbengineering.com</h5>
       </div>
     </div>
-  </footer>
+  </div>
+</footer>
+<!--end footer-->
 </body>
 </html>
